Updates from Overleaf

--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -119,3 +119,310 @@
   publisher={Wiley Online Library}
 }
 
+@article{bayes1763lii,
+  title={LII. An essay towards solving a problem in the doctrine of chances. By the late Rev. Mr. Bayes, FRS communicated by Mr. Price, in a letter to John Canton, AMFR S},
+  author={Bayes, Thomas},
+  journal={Philosophical transactions of the Royal Society of London},
+  number={53},
+  pages={370--418},
+  year={1763},
+  publisher={The Royal Society London}
+}
+
+@article{dawid1979conditional,
+  title={Conditional independence in statistical theory},
+  author={Dawid, A Philip},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={41},
+  number={1},
+  pages={1--15},
+  year={1979},
+  publisher={Wiley Online Library}
+}
+
+@article{holland1981exponential,
+  title={An exponential family of probability distributions for directed graphs},
+  author={Holland, Paul W and Leinhardt, Samuel},
+  journal={Journal of the american Statistical association},
+  volume={76},
+  number={373},
+  pages={33--50},
+  year={1981},
+  publisher={Taylor \& Francis Group}
+}
+
+@article{metropolis1949monte,
+  title={The monte carlo method},
+  author={Metropolis, Nicholas and Ulam, Stanislaw},
+  journal={Journal of the American statistical association},
+  volume={44},
+  number={247},
+  pages={335--341},
+  year={1949},
+  publisher={Taylor \& Francis}
+}
+
+@article{markov1906extension,
+  title={Extension of the law of large numbers to dependent quantities},
+  author={Markov, Andrey Andreyevich},
+  journal={Izv. Fiz.-Matem. Obsch. Kazan Univ.(2nd Ser)},
+  volume={15},
+  pages={135--156},
+  year={1906}
+}
+
+@article{metropolis1953equation,
+  title={Equation of state calculations by fast computing machines},
+  author={Metropolis, Nicholas and Rosenbluth, Arianna W and Rosenbluth, Marshall N and Teller, Augusta H and Teller, Edward},
+  journal={The journal of chemical physics},
+  volume={21},
+  number={6},
+  pages={1087--1092},
+  year={1953},
+  publisher={American Institute of Physics}
+}
+
+@article{hastings1970monte,
+  title={Monte Carlo sampling methods using Markov chains and their applications},
+  author={Hastings, W Keith},
+  year={1970},
+  publisher={Oxford University Press}
+}
+
+@article{geman1984stochastic,
+  title={Stochastic relaxation, Gibbs distributions, and the Bayesian restoration of images},
+  author={Geman, Stuart and Geman, Donald},
+  journal={IEEE Transactions on pattern analysis and machine intelligence},
+  number={6},
+  pages={721--741},
+  year={1984},
+  publisher={IEEE}
+}
+
+@book{dey2000generalized,
+  title={Generalized linear models: A Bayesian perspective},
+  author={Dey, Dipak K and Ghosh, Sujit K and Mallick, Bani K},
+  year={2000},
+  publisher={CRC Press}
+}
+
+@book{fahrmeir2013multivariate,
+  title={Multivariate statistical modelling based on generalized linear models},
+  author={Fahrmeir, Ludwig and Tutz, Gerhard},
+  year={2013},
+  publisher={Springer Science \& Business Media}
+}
+
+@article{lang2004bayesian,
+  title={Bayesian P-splines},
+  author={Lang, Stefan and Brezger, Andreas},
+  journal={Journal of computational and graphical statistics},
+  volume={13},
+  number={1},
+  pages={183--212},
+  year={2004},
+  publisher={Taylor \& Francis}
+}
+
+@article{chu2005gaussian,
+  title={Gaussian processes for ordinal regression.},
+  author={Chu, Wei and Ghahramani, Zoubin and Williams, Christopher KI},
+  journal={Journal of machine learning research},
+  volume={6},
+  number={7},
+  year={2005}
+}
+
+@article{fahrmeir2001bayesian,
+  title={Bayesian inference for generalized additive mixed models based on Markov random field priors},
+  author={Fahrmeir, Ludwig and Lang, Stefan},
+  journal={Journal of the Royal Statistical Society: Series C (Applied Statistics)},
+  volume={50},
+  number={2},
+  pages={201--220},
+  year={2001},
+  publisher={Wiley Online Library}
+}
+
+@book{kitagawa1996smoothness,
+  title={Smoothness priors analysis of time series},
+  author={Kitagawa, Genshiro and Gersch, Will},
+  volume={116},
+  year={1996},
+  publisher={Springer Science \& Business Media}
+}
+
+@book{banerjee2014hierarchical,
+  title={Hierarchical modeling and analysis for spatial data},
+  author={Banerjee, Sudipto and Carlin, Bradley P and Gelfand, Alan E},
+  year={2014},
+  publisher={CRC press}
+}
+
+@article{marroquin2001gauss,
+  title={Gauss-Markov measure field models for low-level vision},
+  author={Marroquin, Jose L. and Velasco, Fernando A. and Rivera, Mariano and Nakamura, Miguel},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume={23},
+  number={4},
+  pages={337--348},
+  year={2001},
+  publisher={IEEE}
+}
+
+@article{kammann2003geoadditive,
+  title={Geoadditive models},
+  author={Kammann, EE and Wand, Matthew P},
+  journal={Journal of the Royal Statistical Society: Series C (Applied Statistics)},
+  volume={52},
+  number={1},
+  pages={1--18},
+  year={2003},
+  publisher={Wiley Online Library}
+}
+
+@article{gamerman1997sampling,
+  title={Sampling from the posterior distribution in generalized linear mixed models},
+  author={Gamerman, Dani},
+  journal={Statistics and Computing},
+  volume={7},
+  number={1},
+  pages={57--68},
+  year={1997},
+  publisher={Springer}
+}
+
+@book{cressie2015statistics,
+  title={Statistics for spatial data},
+  author={Cressie, Noel},
+  year={2015},
+  publisher={John Wiley \& Sons}
+}
+
+@incollection{diggle2003introduction,
+  title={An introduction to model-based geostatistics},
+  author={Diggle, Peter J and Ribeiro, Paulo J and Christensen, Ole F},
+  booktitle={Spatial statistics and computational methods},
+  pages={43--86},
+  year={2003},
+  publisher={Springer}
+}
+
+@book{gelfand2010handbook,
+  title={Handbook of spatial statistics},
+  author={Gelfand, Alan E and Diggle, Peter and Guttorp, Peter and Fuentes, Montserrat},
+  year={2010},
+  publisher={CRC press}
+}
+
+@article{guttorp2006studies,
+  title={Studies in the history of probability and statistics XLIX on the Mat{\'e}rn correlation family},
+  author={Guttorp, Peter and Gneiting, Tilmann},
+  journal={Biometrika},
+  volume={93},
+  number={4},
+  pages={989--995},
+  year={2006},
+  publisher={Oxford University Press}
+}
+
+@article{cameletti2013spatio,
+  title={Spatio-temporal modeling of particulate matter concentration through the SPDE approach},
+  author={Cameletti, Michela and Lindgren, Finn and Simpson, Daniel and Rue, H{\aa}vard},
+  journal={AStA Advances in Statistical Analysis},
+  volume={97},
+  number={2},
+  pages={109--131},
+  year={2013},
+  publisher={Springer}
+}
+
+@article{simpson2017penalising,
+  title={Penalising model component complexity: A principled, practical approach to constructing priors},
+  author={Simpson, Daniel and Rue, H{\aa}vard and Riebler, Andrea and Martins, Thiago G and S{\o}rbye, Sigrunn H},
+  journal={Statistical science},
+  pages={1--28},
+  year={2017},
+  publisher={JSTOR}
+}
+
+@article{kullback1951information,
+  title={On information and sufficiency},
+  author={Kullback, Solomon and Leibler, Richard A},
+  journal={The annals of mathematical statistics},
+  volume={22},
+  number={1},
+  pages={79--86},
+  year={1951},
+  publisher={JSTOR}
+}
+
+@article{riebler2016intuitive,
+  title={An intuitive Bayesian spatial model for disease mapping that accounts for scaling},
+  author={Riebler, Andrea and S{\o}rbye, Sigrunn H and Simpson, Daniel and Rue, H{\aa}vard},
+  journal={Statistical methods in medical research},
+  volume={25},
+  number={4},
+  pages={1145--1165},
+  year={2016},
+  publisher={Sage Publications Sage UK: London, England}
+}
+
+@article{martinez2008autoregressive,
+  title={An autoregressive approach to spatio-temporal disease mapping},
+  author={Martínez-Beneito, Miguel A and López-Quilez, Antonio and Botella-Rocamora, Paloma},
+  journal={Statistics in medicine},
+  volume={27},
+  number={15},
+  pages={2874--2889},
+  year={2008},
+  publisher={Wiley Online Library}
+}
+
+@misc{openshaw1984modifiable,
+  title={The modifiable areal unit problem. Norwich, UK},
+  author={Openshaw, Stan},
+  year={1984},
+  publisher={Geo books}
+}
+
+@article{robinson2009ecological,
+  title={Ecological correlations and the behavior of individuals},
+  author={Robinson, William S},
+  journal={International journal of epidemiology},
+  volume={38},
+  number={2},
+  pages={337--341},
+  year={2009},
+  publisher={Oxford University Press}
+}
+
+@article{gotway2002combining,
+  title={Combining incompatible spatial data},
+  author={Gotway, Carol A and Young, Linda J},
+  journal={Journal of the American Statistical Association},
+  volume={97},
+  number={458},
+  pages={632--648},
+  year={2002},
+  publisher={Taylor \& Francis}
+}
+
+@book{waller2004applied,
+  title={Applied spatial statistics for public health data},
+  author={Waller, Lance A and Gotway, Carol A},
+  volume={368},
+  year={2004},
+  publisher={John Wiley \& Sons}
+}
+
+@article{whittle1963stochastic,
+  title={Stochastic-processes in several dimensions},
+  author={Whittle, Peter},
+  journal={Bulletin of the International Statistical Institute},
+  volume={40},
+  number={2},
+  pages={974--994},
+  year={1963},
+  publisher={INT STATISTICAL INSTITUTE 428 PRINSES BEATRIXLAEN, VOORBURG, NETHERLANDS}
+}
