--- a/tex_files/my-thesis.tex
+++ b/tex_files/my-thesis.tex
@@ -16,7 +16,7 @@
     chapterprefix=false,    % do not display a prefix for chapters
     appendixprefix=false,    % but display a prefix for appendix chapter
     draft=false,            % value for draft version
-    configurebiblatex=false
+    configurebiblatex=true
 ]{scrreprt}%
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -29,7 +29,7 @@
 \usepackage{tikz}
 \usepackage{tikzit}
 \input{tikz.tikzstyles}
-\usepackage[backend=biber,style=alphabetic,citestyle=authoryear,autocite=footnote,citereset=chapter, maxcitenames=2]{biblatex}
+
 
 % **************************************************
 % Setup YOUR thesis document in this file !
