added chapter about data collection

--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -28,7 +28,8 @@
 @article{raiffaapplied,
   title={Applied Statistical Decision Theory, Division of Research, GraduateSchool of Business Administration, Harvard University, Boston, 1961},
   author={Raiffa, Howard and Schlaifer, Robert},
-  journal={RaiffaApplied Statistical Decision Theory1961}
+  journal={RaiffaApplied Statistical Decision Theory1961},
+  year={1961}
 }
 
 @book{box2011bayesian,
@@ -426,3 +427,156 @@
   year={1963},
   publisher={INT STATISTICAL INSTITUTE 428 PRINSES BEATRIXLAEN, VOORBURG, NETHERLANDS}
 }
+
+@article{fink1997compendium,
+  title={A compendium of conjugate priors},
+  author={Fink, Daniel},
+  journal={See http://www. people. cornell. edu/pages/df36/CONJINTRnew\% 20TEX. pdf},
+  volume={46},
+  year={1997},
+  publisher={Citeseer}
+}
+
+@article{robert2010bayesian,
+  title={Bayesian inference},
+  author={Robert, Christian P and Marin, Jean-Michel and Rousseau, Judith},
+  journal={arXiv preprint arXiv:1002.2080},
+  year={2010}
+}
+
+@misc{irwin2005prior,
+  title={Prior choice, summarizing the posterior},
+  author={Irwin, ME},
+  year={2005},
+  publisher={Spring}
+}
+
+@article{jeffreys1946invariant,
+  title={An invariant form for the prior probability in estimation problems},
+  author={Jeffreys, Harold},
+  journal={Proceedings of the Royal Society of London. Series A. Mathematical and Physical Sciences},
+  volume={186},
+  number={1007},
+  pages={453--461},
+  year={1946},
+  publisher={The Royal Society London}
+}
+
+@misc{jordan2010,
+  author        = {Michael I. Jordan},
+  title         = {Lecture 7: Jeffreys Priors and Reference Priors},
+  month         = {2},
+  year          = {2010},
+  publisher={Department of Electrical Engineering and Computer Sciences at UC Berkeley}
+}
+
+@misc{thohan88,
+  author = {Thomas Hansen},
+  title = {Public COVID-19 Data for Norway (covid19data.no)},
+  year = {2020},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/thohan88/covid19-nor-data}},
+  commit = {a4e9c644024ddc299ddbffac241d8437b95533c4}
+}
+
+@Manual{covid19germany,
+    title = {covid19germany: Load, visualise and analyse daily updated data on the COVID-19
+outbreak in Germany},
+    author = {Clemens Schmid and Stephan Schiffels and Johannes Boog and Martin Lange and Moritz Aschoff},
+    year = {2021},
+    note = {R package version 0.1.1},
+  }
+
+@online{ssb,
+  author = {Statistisk Sentralbyrå},
+  title = {StatBank Norway},
+  year = 2016,
+  url = {https://www.ssb.no/en/statbank/},
+  urldate = {2021-02-28}
+}
+
+@online{rdb,
+  author = {Statistische Ämter des Bundes und der Länder},
+  title = {Regionaldatenbank Deutschland},
+  year = 2020,
+  url = {https://www.regionalstatistik.de/genesis/online},
+  urldate = {2021-02-28}
+}
+
+@online{geonorge,
+  author = {Geonorge},
+  title = {Kartkatalogen},
+  year = 2021,
+  url = {https://www.geonorge.no/},
+  urldate = {2021-02-28}
+}
+
+@misc{shapeGithub,
+  author = {Erik Smistad},
+  title = {konverter-norgeskart-projeksjon},
+  year = {2020},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/smistad/konverter-norgeskart-projeksjon}},
+  commit = {c57ac196880fd53f6c6c7d7d81947599ebfd30f8}
+}
+
+@online{esri,
+  author = {Esri Deutschland},
+  title = {Kreisgrenzen 2017},
+  year = 2020,
+  url = {https://opendata-esri-de.opendata.arcgis.com/datasets/affd8ace4c204981b5d32070f9547eb9_0},
+  urldate = {2021-02-28}
+}
+
+ @misc{OpenStreetMap,
+   author = {{OpenStreetMap contributors}},
+   title = {{Planet dump retrieved from https://planet.osm.org }},
+   howpublished = "\url{ https://www.openstreetmap.org }",
+   year = {2017},
+ }
+ 
+ @Article{osmdata,
+    title = {osmdata},
+    author = {Mark Padgham and Bob Rudis and Robin Lovelace and Maëlle Salmon},
+    journal = {The Journal of Open Source Software},
+    year = {2017},
+    volume = {2},
+    number = {14},
+    month = {jun},
+    publisher = {The Open Journal},
+    url = {https://doi.org/10.21105/joss.00305},
+    doi = {10.21105/joss.00305},
+  }
+  
+ @Article{reshape2,
+    title = {Reshaping Data with the {reshape} Package},
+    author = {Hadley Wickham},
+    journal = {Journal of Statistical Software},
+    year = {2007},
+    volume = {21},
+    number = {12},
+    pages = {1--20},
+    url = {http://www.jstatsoft.org/v21/i12/},
+  }
+  
+  @Manual{stringr,
+    title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+    author = {Hadley Wickham},
+    year = {2019},
+    note = {R package version 1.4.0},
+    url = {https://CRAN.R-project.org/package=stringr},
+  }
+  
+  @Article{sf,
+    author = {Edzer Pebesma},
+    title = {{Simple Features for R: Standardized Support for Spatial Vector Data}},
+    year = {2018},
+    journal = {{The R Journal}},
+    doi = {10.32614/RJ-2018-009},
+    url = {https://doi.org/10.32614/RJ-2018-009},
+    pages = {439--446},
+    volume = {10},
+    number = {1},
+  }
