--- a/tex_files/my-thesis.tex
+++ b/tex_files/my-thesis.tex
@@ -28,6 +28,8 @@
 \usepackage{float}
 \usepackage{tikz}
 \usepackage{tikzit}
+\usepackage{float}
+\usepackage{booktabs}
 \input{tikz.tikzstyles}
 
 
@@ -85,6 +87,10 @@
 \input{chapter-coronavirus}  
 \input{chapter-bayes}
 \input{chapter-geodata}
+\input{chapter-datacollection}
+%\input{chapter-analysis}
+%\input{chapter-discussion}
+
 
 {%
 \setstretch{1.1}
