datacollection + analysis chapter

--- a/tex_files/bib-refs.bib
+++ b/tex_files/bib-refs.bib
@@ -512,7 +512,7 @@ outbreak in Germany},
   urldate = {2021-02-28}
 }
 
-@misc{shapeGithub,
+@online{shapeGithub,
   author = {Erik Smistad},
   title = {konverter-norgeskart-projeksjon},
   year = {2020},
@@ -530,7 +530,7 @@ outbreak in Germany},
   urldate = {2021-02-28}
 }
 
- @misc{OpenStreetMap,
+ @online{OpenStreetMap,
    author = {{OpenStreetMap contributors}},
    title = {{Planet dump retrieved from https://planet.osm.org }},
    howpublished = "\url{ https://www.openstreetmap.org }",
@@ -579,4 +579,57 @@ outbreak in Germany},
     pages = {439--446},
     volume = {10},
     number = {1},
+  }
+  
+  @article{haldane1941fitting,
+  title={The fitting of binomial distributions},
+  author={Haldane, John BS},
+  journal={Annals of Eugenics},
+  volume={11},
+  number={1},
+  pages={179--181},
+  year={1941},
+  publisher={Wiley Online Library}
+}
+
+@article{newspaper1,
+ author  = {Astrid Iren Solheim Korsvoll},
+ date    = {2020-10-01},
+ title   = {Nye smittetilfelle i Hyllestad- no har sju personar korona},
+ journal = {Firda},
+ url     = {https://www.firda.no/nye-smittetilfelle-i-hyllestad-no-har-sju-personar-korona/s/5-15-1070915},
+ urldate = {2021-03-05}
+}
+
+@article{newspaper2,
+ author  = {NTB},
+ date    = {2021-02-08},
+ title   = {Ordfører: Ulvik-utbruddet spredte seg trolig blant barna},
+ journal = {Haugesunds Avis},
+ url     = {https://www.h-avis.no/ordforer-ulvik-utbruddet-spredte-seg-trolig-blant-barna/s/5-62-1138922},
+ urldate = {2021-03-05}
+}
+
+@Article{fitdistrplus,
+    title = {{fitdistrplus}: An {R} Package for Fitting Distributions},
+    author = {Marie Laure Delignette-Muller and Christophe Dutang},
+    journal = {Journal of Statistical Software},
+    year = {2015},
+    volume = {64},
+    number = {4},
+    pages = {1--34},
+    url = {https://www.jstatsoft.org/v64/i04/},
+  }
+
+@Article{rinla,
+    title = {Spatial Data Analysis with {R}-{INLA} with Some
+      Extensions},
+    author = {Roger S. Bivand and Virgilio G\'omez-Rubio and H{\aa}vard
+      Rue},
+    journal = {Journal of Statistical Software},
+    year = {2015},
+    volume = {63},
+    number = {20},
+    pages = {1--31},
+    url = {http://www.jstatsoft.org/v63/i20/},
   }
