--- a/tex_files/my-thesis.tex
+++ b/tex_files/my-thesis.tex
@@ -27,9 +27,11 @@
 \usepackage{stmaryrd}
 \usepackage{float}
 \usepackage{tikz}
+\usepackage{listings}
 \usepackage{tikzit}
 \usepackage{float}
 \usepackage{booktabs}
+\usepackage{svg}
 \input{tikz.tikzstyles}
 
 
@@ -88,7 +90,8 @@
 \input{chapter-bayes}
 \input{chapter-geodata}
 \input{chapter-datacollection}
-%\input{chapter-analysis}
+\input{chapter-analysis}
+%\input{chapter-appendix}
 %\input{chapter-discussion}
 
 
